--- a/_site.yml
+++ b/_site.yml
@@ -4,4 +4,6 @@ navbar:
   title: "My Website"
   left:
     - text: "Home"
-      href: FinalProject.html
+      href: index.html
+    - text: "About"
+      href: about.html
